replaced Dequeue with regular List to work with Java5